--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script src="app.js"></script>
 <body>
+    <h1>Hello World</h1>
 </body>
+
 </html>
