--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src="app.js"></script>
+
 <body>
     <h1>Hello World</h1>
+    <div id="hello">Hello variable</div>
 </body>
-
+<script src="app.js"></script>
 </html>
