--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    <div id="hello">Hello variable</div>
+    <ul>
+        <li class="active">One</li>
+        <li>Two</li>
+        <li>Three</li>
+    </ul>
+    <div class="content">
+        <div>Div One</div>
+        <div>Div Two</div>
+        <div>Div Three</div>
+    </div>
 </body>
 <script src="app.js"></script>
 </html>
