--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <ul>
+    <ul id="my-div">
         <li class="active">One</li>
         <li>Two</li>
         <li>Three</li>
@@ -18,6 +18,8 @@
         <div>Div Two</div>
         <div>Div Three</div>
     </div>
+    <img src="" alt="">
+    <a class="expImage" href="#">Google</a>
 </body>
 <script src="app.js"></script>
 </html>
