--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
         <div>Div Three</div>
     </div>
     <img src="" alt="">
-    <a class="expImage" href="#">Google</a>
+    <a class="expImage" href="https://google.com">Google</a>
+    <button onclick="console.log('clicked');">
+        Click Me
+    </button>
+    <form >
+        <input type="text" class="one two three" name="username" placeholder="Max 10 letters only">
+        <input type="text" name="age" placeholder="Can't be empty" >
+        <input type="submit">
+    </form>
 </body>
 <script src="app.js"></script>
 </html>
