--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+
+    <div>
+        <span class="one">ONE</span>
+        <!--comment-->
+        <span class="two">TWO</span>
+        <!--comment-->
+        <span class="three">THREE</span>
+        <!--comment-->
+    </div>
     <ul id="my-div">
         <li class="active">One</li>
         <li>Two</li>
