--- a/index.html
+++ b/index.html
@@ -8,35 +8,12 @@
 </head>
 
 <body>
-
-    <div>
-        <span class="one">ONE</span>
-        <!--comment-->
-        <span class="two">TWO</span>
-        <!--comment-->
-        <span class="three">THREE</span>
-        <!--comment-->
-    </div>
-    <ul id="my-div">
-        <li class="active">One</li>
-        <li>Two</li>
-        <li>Three</li>
-    </ul>
-    <div class="content">
-        <div>Div One</div>
-        <div>Div Two</div>
-        <div>Div Three</div>
-    </div>
-    <img src="" alt="">
-    <a class="expImage" href="https://google.com">Google</a>
-    <button onclick="console.log('clicked');">
-        Click Me
-    </button>
-    <form >
-        <input type="text" class="one two three" name="username" placeholder="Max 10 letters only">
-        <input type="text" name="age" placeholder="Can't be empty" >
-        <input type="submit">
-    </form>
+    <div>Element</div>
+    <span>Element</span>
+    <p>Element</p>
+    <article>Element</article>
+    <section>Element</section>
 </body>
+
 <script src="app.js"></script>
 </html>
